wikijs/dump-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/proxy-body-size":"50m"},"name":"wikijs-ingress","namespace":"wikijs"},"spec":{"rules":[{"host":"wikijs.fortytwobinary.com","http":{"paths":[{"backend":{"serviceName":"wikijs","servicePort":80},"path":"/"}]}}],"tls":[{"hosts":["wikijs.fortytwobinary.com"],"secretName":"apache-prod-tls"}]}}
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
    creationTimestamp: "2021-04-11T15:49:03Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/cluster-issuer: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:nginx.ingress.kubernetes.io/proxy-body-size: {}
        f:spec:
          f:rules: {}
          f:tls: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2021-04-11T15:49:03Z"
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      time: "2021-04-11T15:49:18Z"
    name: wikijs-ingress
    namespace: wikijs
    resourceVersion: "4071872"
    uid: ec38a480-435a-46f3-ad6d-a72c56ca67c2
  spec:
    rules:
    - host: wikijs.fortytwobinary.com
      http:
        paths:
        - backend:
            service:
              name: wikijs
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - wikijs.fortytwobinary.com
      secretName: apache-prod-tls
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.1.14
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
