wikijs/mariadb-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-mariadb
  namespace: wikijs
  labels:
    app: wikijs
spec:
  selector:
    matchLabels:
      app: wikijs
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wikijs
        tier: mysql
    spec:
      containers:
        - image: mariadb
          name: mysql
          env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mariadb-pass
                  key: password
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: pv006
---
