wikijs/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-mariadb
  namespace: wikijs
  labels:
    app: wikijs
spec:
  ports:
    - port: 3306
  selector:
    app: wikijs
    tier: mariadb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-mariadb
  namespace: wikijs
  labels:
    app: wikijs
spec:
  selector:
    matchLabels:
      app: wikijs
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wikijs
        tier: mariadb
    spec:
      containers:
        - image: mariadb
          name: mariadb
          env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mariadb-pass
                  key: password
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: pv006
